Add iRacingSimulator project This is a very extensive class library that uses the SDK wrapper. It encapsulates things like driver list, results, time deltas, pitstops, and even raises events for driver swaps, pitstops, new fastest lap and leader changes.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /iRacingSdkWrapper/obj
 /iRacingSdkWrapper/bin
 /iRacingSdkWrapper/iRacingSdkWrapper.v12.suo
+/iRacingSimulator/iRacingSimulator.csproj.user
+/iRacingSimulator/bin
+/iRacingSimulator/obj
