Updated pit counting, attempt to reduce amount of "false pit" counts (due to lag, blinking, etc). Added new 'RaceEvents' for several possible event scenarios (e.g. driver swap, new leader, green/caution, etc).

--- a/iRacingSimulator/iRacingSimulator.csproj
+++ b/iRacingSimulator/iRacingSimulator.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Drivers\DriverQualyResults.cs" />
     <Compile Include="Drivers\DriverResults.cs" />
     <Compile Include="Drivers\License.cs" />
+    <Compile Include="Events\RaceEvent.cs" />
     <Compile Include="Laptime.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="SessionData.cs" />
