--- a/iRacingSimulator/iRacingSimulator.csproj
+++ b/iRacingSimulator/iRacingSimulator.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Drivers\Driver.cs" />
     <Compile Include="Drivers\DriverCarInfo.cs" />
+    <Compile Include="Drivers\DriverChampInfo.cs" />
     <Compile Include="Drivers\DriverLiveInfo.cs" />
     <Compile Include="Drivers\DriverPitInfo.cs" />
     <Compile Include="Drivers\DriverPrivateInfo.cs" />
