Fixed bugs related to 'previous telemetry' not existing. Fixed speed for all cars (now in m/s). Added sector times (from actual track sectors) and 'fake' sector times (from dividing track into equal thirds). Updated some samples.

--- a/Samples/iRacingSimulator.Examples.WPF-MVVM-DriverGrid/iRacingSimulator.Examples.WPF-MVVM-DriverGrid.csproj
+++ b/Samples/iRacingSimulator.Examples.WPF-MVVM-DriverGrid/iRacingSimulator.Examples.WPF-MVVM-DriverGrid.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\SdkViewModel.cs" />
     <Page Include="MainWindow.xaml">
