--- a/iRacingSdkWrapper/iRacingSdkWrapper.csproj
+++ b/iRacingSdkWrapper/iRacingSdkWrapper.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="telemetry_11_23_15.pdf" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\irsdkSharp\iRSDKSharp.csproj">
