--- a/iRacingSimulator/iRacingSimulator.csproj
+++ b/iRacingSimulator/iRacingSimulator.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeDelta.cs" />
     <Compile Include="Track.cs" />
+    <Compile Include="TrackConditions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\iRacingSdkWrapper\iRacingSdkWrapper.csproj">
