--- a/Samples/iRacingSimulator.Examples.WPF-MVVM-DriverGrid/iRacingSimulator.Examples.WPF-MVVM-DriverGrid.csproj
+++ b/Samples/iRacingSimulator.Examples.WPF-MVVM-DriverGrid/iRacingSimulator.Examples.WPF-MVVM-DriverGrid.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <OutputType>WinExe</OutputType>
     <RootNamespace>iRacingSimulator.Examples.WPF_MVVM_DriverGrid</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
